syntax = "proto3";

option csharp_namespace = "Generated";

import "User.proto";

message ConnectRequest
{
	User user = 1;
}