syntax = "proto3";

option csharp_namespace = "Generated";

import "User.proto";

message DisconnectRequest
{
	User user = 1;
}